  the `opam install` command and allow non-interactive, parallel and
  verbose output to be activated in the OPAM source builds.  This
  conveniently allows the most common flags to `opam install` to be
  used by an equivalent `opam depext -i` call.
* Fix the debug printing when using `opam depext -d` to flush output
  more often and add newlines.

0.9.1 (2016-02-22):
* Do not assume that `bash` is installed for source depexts (#35).
* Add support for Red Hat Enterprise Linux via `rhel` tag (#32).
* Add multi-distro Docker-based Travis file.

0.9.0 (2016-01-04):
* Add support for Alpine Linux.

0.8.1 (2015-08-03):
* Repair OpenBSD depext support

0.8 (2015-07-27):
* Detect and support opam 1.1.0
* Revert unneeded #23

0.7 (2015-07-12):
* Fix `os-release` detection by evaluating it through a shell rather
  than parsing the file directly.  Repairs CentOS and RHEL detection.
* Fix package detection on Ubuntu and Debian by doing a sequence of
  `dpkg` queries instead of a combined one. (#23 via Francois Berenger).

0.6 (2015-06-25):
* Detect already installed packages and skip them
* Better OS detection, use `os-release`
* Added a `--dryrun` option

0.5 (2015-04-19):
* Do not let `yum upgrade` go interactive.
* Print commands before `sudo` so that they can be cut-and-pasted (#4).
* Double-check the installation of multiple RPMs as the exit code
  can be unreliable (#9).
* Add support for Gentoo and Arch Linux (#11).
* Add Travis CI scripts.

0.4 (2015-03-22):
* Add `-u` or `--update` flag to trigger an OS package set update
  before performing external dependency installation. This is useful
  on Debian or Ubuntu where package installation may fail if the
  sets are not up-to-date with respect to latest security updates.
* Fix installation of source packages.
* Detect the CentOS distribution correctly.
* Fix external command detection to not go through a subshell.

0.3 (2015-01-27):
* Add OCaml 3.12.1 compatibility.