@@ -121,6 +121,7 @@ let distribution = function
        | "alpine" -> Some `Alpine
        | "arch" -> Some `Archlinux
        | "rhel" -> Some `RHEL
+       | "ol" -> Some `OracleLinux
        | s -> Some (`Other s)
      with Not_found | Failure _ -> None)
   | `OpenBSD -> Some `OpenBSD
@@ -156,6 +157,7 @@ let distrflags = function
   | Some `Centos -> ["centos"]
   | Some `Fedora -> ["fedora"]
   | Some `RHEL -> ["rhel"]
+  | Some `OracleLinux -> ["ol"]
   | Some `Mageia -> ["mageia"]
   | Some `Alpine -> ["alpine"]
   | Some `Archlinux -> ["archlinux"]
@@ -205,7 +207,7 @@ let install_packages_commands ~interactive distribution packages =
     ["port"::"install"::packages]
   | Some (`Debian | `Ubuntu) ->
     ["apt-get"::"install"::yes ["-qq"; "-yy"] packages]
-  | Some (`Centos | `Fedora | `Mageia | `RHEL) ->
+  | Some (`Centos | `Fedora | `Mageia | `RHEL | `OracleLinux) ->
     ["yum"::"install"::yes ["-y"] packages;
      "rpm"::"-q"::packages]
   | Some `FreeBSD ->
@@ -261,9 +263,9 @@ let get_installed_packages distribution (packages: string list): string list =
          | [pkg;_;_;"installed"] -> pkg :: acc
          | _ -> acc)
       [] lines
-  | Some (`Centos | `Fedora | `Mageia | `Archlinux| `Gentoo | `Alpine | `RHEL) ->
+  | Some (`Centos | `Fedora | `Mageia | `Archlinux| `Gentoo | `Alpine | `RHEL | `OracleLinux) ->
     let query_command_prefix = match distribution with
-      | Some (`Centos | `Fedora | `Mageia | `RHEL) -> ["rpm"; "-qi"]
+      | Some (`Centos | `Fedora | `Mageia | `RHEL | `OracleLinux) -> ["rpm"; "-qi"]
       | Some `Archlinux -> ["pacman"; "-Q"]
       | Some `Gentoo -> ["equery"; "list"]
       | Some `Alpine -> ["apk"; "info"; "-e"]
