@@ -7,6 +7,8 @@
   used by an equivalent `opam depext -i` call.
 * Fix the debug printing when using `opam depext -d` to flush output
   more often and add newlines.
+* Add support for Oracle Linux via the `ol` tag.
+* Add support for Raspbian Linux via the `raspbian` tag (#41).
 
 0.9.1 (2016-02-22):
 * Do not assume that `bash` is installed for source depexts (#35).
